vlib/v/checker/tests/invalid_variable_name_err.out
vlib/v/checker/tests/invalid_variable_name_err.vv:2:2: error: `string` is reserved type name, cannot be used as the variable name
    1 | fn main() {
    2 |     string := 'hello, world'
      |     ~~~~~~
    3 |     println(string)
    4 |
vlib/v/checker/tests/invalid_variable_name_err.vv:5:2: error: `bool` is reserved type name, cannot be used as the variable name
    3 |     println(string)
    4 |
    5 |     bool := true
      |     ~~~~
    6 |     println(bool)
    7 |
vlib/v/checker/tests/invalid_variable_name_err.vv:8:2: error: `int` is reserved type name, cannot be used as the variable name
    6 |     println(bool)
    7 |
    8 |     int := 22
      |     ~~~
    9 |     println(int)
   10 |
vlib/v/checker/tests/invalid_variable_name_err.vv:11:2: error: `u64` is reserved type name, cannot be used as the variable name
    9 |     println(int)
   10 |
   11 |     u64 := 222
      |     ~~~
   12 |     println(u64)
   13 |
vlib/v/checker/tests/invalid_variable_name_err.vv:14:2: error: `f64` is reserved type name, cannot be used as the variable name
   12 |     println(u64)
   13 |
   14 |     f64 := 2.22
      |     ~~~
   15 |     println(f64)
   16 | }
